# Comfy_Felsirnodes

./: .gitignore  AspectRatioNode.py  FocalPointFromSegsNode.py  FocalRescaleNode.py  FocalRescaleNodeRel.py  FocalRescaleRelNode.py  LatentAspectRatioNode.py  MaskToCrop.py  MaskToCropNode.py  README.md  RescaleMaintainAspectNode.py  __init__.py  pyproject.toml
.github/workflows/: publish_action.yml
